@@ -51,6 +51,7 @@ Improved TBBlue emulation:
 -added tbblue register 63H: copper 16 bit write 
 -added tbblue register 69H: display control 1 register
 -added tbblue registers 0x35-0x39, 0x75-0x79
+-added copper opcodes NOOP, HALT
 
 Improved Hex editor: can now copy to a different memory zone
 Improved menu: 
